최상위 namespace에 MOONG 추가

--- a/Browser/Browser.vcxproj
+++ b/Browser/Browser.vcxproj
@@ -139,10 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Registry\Registry\Registry.cpp" />
     <ClCompile Include="Browser.cpp" />
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Registry\Registry\Registry.h" />
     <ClInclude Include="Browser.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
