--- a/Browser/Browser.vcxproj
+++ b/Browser/Browser.vcxproj
@@ -141,11 +141,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\ConvertDataType\ConvertDataType\ConvertDataType.cpp" />
+    <ClCompile Include="..\..\Exception\Exception\Exception.cpp" />
     <ClCompile Include="..\..\Registry\Registry\Registry.cpp" />
     <ClCompile Include="Browser.cpp" />
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\ConvertDataType\ConvertDataType\ConvertDataType.h" />
+    <ClInclude Include="..\..\Exception\Exception\Exception.h" />
     <ClInclude Include="..\..\Registry\Registry\Registry.h" />
     <ClInclude Include="Browser.h" />
   </ItemGroup>
